// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`app Renders token counts consistently 🎉 1`] = `
<div>
  <p
    class="xlh3980 xvmahel x1ghz6dp xyddcd2 x1enbaoa x1sk33t8 x7gbg69 xli2zx2 x1958duc x12oo3zp x8d2oow x1mzt3pk x1vvkbs x1yc453h xce744n LbzErQ"
  >
    Use 5 of 50 credits
  </p>
</div>
`;

exports[`app Renders token counts consistently 🎉 2`] = `
<div>
  <p
    class="xlh3980 xvmahel x1ghz6dp xyddcd2 x1enbaoa x1sk33t8 x7gbg69 xli2zx2 x1958duc x12oo3zp x8d2oow x1mzt3pk x1vvkbs x1yc453h xce744n LbzErQ"
  >
    Use 1 of 1 credit
  </p>
</div>
`;

exports[`app Renders token counts consistently 🎉 3`] = `
<div>
  <p
    class="xlh3980 xvmahel x1ghz6dp xyddcd2 x1enbaoa x1sk33t8 x7gbg69 xli2zx2 x1958duc x12oo3zp x8d2oow x1mzt3pk x1vvkbs x1yc453h xce744n LbzErQ"
  >
    Use 1 of 0 credits
  </p>
</div>
`;
